# logistic_viability

./: README.md  pyproject.toml
cd_viabilidade/: __init__.py  api.py  auto_costs.py  cli.py  config.py  cost_matrix.py  data_io.py  facility_location.py  financials.py  geocoding.py  logging_config.py  mapping.py  reporting.py  scenarios.py
data/: clients.csv  facilities.csv  fixed_costs.csv  regional_costs.csv
notebooks/: demo_viabilidade.ipynb
outputs/: assignments_2_novos_cds.csv  assignments_3_novos_cds.csv  mapa_1_novo_cd.html  mapa_2_novos_cds.html  mapa_3_novos_cds.html  mapa_base.html  relatorio_2_novos_cds.md  relatorio_3_novos_cds.md  relatorio_executivo.md
scripts/: generate_report.sh  run_api.sh  run_pipeline.sh
tests/: test_api.py  test_auto_costs.py  test_cli.py  test_config.py  test_cost_matrix.py  test_data_io.py  test_facility_location.py  test_financials.py  test_geocoding.py  test_logging_config.py  test_mapping.py  test_reporting.py  test_scenarios.py
