[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logistic-viability"
version = "0.1.0"
description = "Pipeline toy para viabilidade logística"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "geopy>=2.4",
  "pulp>=2.8",
  "folium>=0.16",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
